# cpp_utils

./: CMakeLists.txt  Makefile  Readme.org  vcpkg.json
cmake/: CppUtils.cmake
include/: algorithms.hpp  chrono.hpp  collections.hpp  functional.hpp  iterators.hpp  math.hpp  print.hpp  scope_guard.hpp  strings.hpp  threading.hpp  unique_handler.hpp
include/libutils/: bit.hpp  chrono.hpp  hash.hpp  math.hpp  polyfill.hpp  print.hpp  scope_guard.hpp  smart_pointers.hpp  span.hpp  strings.hpp  testing.hpp  unique_handler.hpp
src/: CMakeLists.txt
src/libutils/: CMakeLists.txt
src/tests/: CMakeLists.txt  algorithms.cpp  chrono.cpp  collections.cpp  unique_handle.cpp
test/: CMakeLists.txt  algorithms.cpp  collections.cpp  unique_handle.cpp
tools/: CMakeLists.txt  chrono_example.cpp
